Revert "Feature/9 ia context docs md"
