# src/main/java/com/ffresco/totem/publicapi/menu/infrastructure/adapter/in/api/PublicMenuProductAttributes.java
@@ -1,10 +1,0 @@
-package com.ffresco.totem.publicapi.menu.infrastructure.adapter.in.api;
-
-public record PublicMenuProductAttributes(
-        String id,
-        String name,
-        String description,
-        PublicMoneyAttributes price,
-        boolean available
-) {
-}
